--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     color: #fff;
     background: transparent;
   }
-  /* Force readable text */
   .intro-fullscreen * {
     color: #fff !important;
     text-shadow: 0 2px 8px rgba(0,0,0,0.9), 
@@ -81,13 +80,16 @@
     max-width: 800px;
     margin: 20px auto;
   }
+
+  /* Directory Styles */
   .directory-container {
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: hidden; /* hide vertical scrollbar */
     padding: 40px;
     box-sizing: border-box;
     color: #222;
+    background: #ffffff; /* WHITE background */
   }
   .directory-title {
     font-size: 32px;
@@ -104,8 +106,9 @@
   }
   .tenant-logos {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 15px;
+    overflow: hidden; /* hide horizontal scrollbar */
   }
   .tenant-logos img {
     height: 70px;
@@ -115,6 +118,7 @@
     padding: 5px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.25);
   }
+
   @keyframes fadeInUp {
     0%{opacity:0; transform:translateY(40px);}
     100%{opacity:1; transform:translateY(0);}
@@ -148,9 +152,6 @@ const floorsRef = ref(db,"blocks/A/floors");
 const tenantIntro = document.getElementById("tenantIntro");
 const directoryView = document.getElementById("directoryView");
 
-let gradientIndex = 0;
-
-// Ordinal floor
 function ordinal(n){
   const s=["th","st","nd","rd"], v=n%100;
   return n+(s[(v-20)%10]||s[v]||s[0]);
@@ -188,22 +189,16 @@ onValue(floorsRef,(snapshot)=>{
       const wrapper = document.createElement("div");
       wrapper.className = "intro-fullscreen";
 
-      // Header
       const header = document.createElement("div");
       header.className = "intro-header";
-      header.innerHTML = `
-        <img src="${tenant.logo}" alt="logo"/>
-        <div class="tenant-name">${tenant.name}</div>
-      `;
+      header.innerHTML = `<img src="${tenant.logo}" alt="logo"/><div class="tenant-name">${tenant.name}</div>`;
       wrapper.appendChild(header);
 
-      // Big logo
       const bigLogo = document.createElement("img");
       bigLogo.src = tenant.logo;
       bigLogo.className = "intro-logo";
       wrapper.appendChild(bigLogo);
 
-      // Details
       const details = document.createElement("div");
       details.className = "intro-details";
       details.innerHTML = `
@@ -232,7 +227,6 @@ onValue(floorsRef,(snapshot)=>{
 
     const container = document.createElement("div");
     container.className = "directory-container";
-    container.style.background = `linear-gradient(135deg, #ff9e42, #ff7042)`; // optional
 
     const title = document.createElement("div");
     title.className = "directory-title";
@@ -242,6 +236,7 @@ onValue(floorsRef,(snapshot)=>{
     Object.keys(data).forEach(floor=>{
       const floorSection = document.createElement("div");
       floorSection.className = "floor-section";
+
       const floorTitle = document.createElement("div");
       floorTitle.className = "floor-title";
       floorTitle.textContent = `Floor ${ordinal(Number(floor))}`;
@@ -249,6 +244,7 @@ onValue(floorsRef,(snapshot)=>{
 
       const logosDiv = document.createElement("div");
       logosDiv.className = "tenant-logos";
+      logosDiv.style.overflow = "hidden"; // hide scrollbars
 
       const tenantsObj = data[floor].tenants;
       if(tenantsObj){
@@ -258,13 +254,14 @@ onValue(floorsRef,(snapshot)=>{
           logosDiv.appendChild(logoImg);
         });
       }
+
       floorSection.appendChild(logosDiv);
       container.appendChild(floorSection);
     });
 
     directoryView.appendChild(container);
 
-    // Auto scroll
+    // Auto scroll vertically
     container.scrollTo({top:0});
     let scrollAmount = 0;
     const scrollStep = container.scrollHeight / 100; 
