--- a/index.html
+++ b/index.html
@@ -2,122 +2,183 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Tenant Intro + Directory Loop</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"/>
+<title>Tenant Intro + Directory Loop (Portrait TV)</title>
 <style>
-  body {
+  html, body {
     margin: 0;
-    font-family: "Poppins", sans-serif;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
-    background: #ffffff; /* Full white background */
+    font-family: "Poppins", sans-serif;
+    background: #ffffff;
     color: #222;
   }
+
   canvas#particles {
     position: fixed;
-    top: 0; left: 0; width: 100%; height: 100%;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
     z-index: 0;
   }
+
   #tenantIntro, #directoryView {
     position: fixed;
-    top: 0; left: 0; width: 100%; height: 100%;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 0;
     box-sizing: border-box;
     z-index: 1;
     overflow: hidden;
     transition: opacity 0.8s ease;
   }
-  /* Fullscreen intro with white background */
+
+  /* Fullscreen intro */
   .intro-fullscreen {
     width: 100%;
     height: 100%;
-    padding: 40px 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     text-align: center;
     animation: fadeInUp 0.8s ease forwards;
-    background: #ffffff;
-    color: #222;
+    background: rgba(255,255,255,0); /* transparent */
+    padding: 2vh 2vw;
+    box-sizing: border-box;
   }
+
   .intro-header {
     display: flex;
     align-items: center;
-    gap: 20px;
-    margin-bottom: 30px;
-  }
-  .intro-header img {
-    height: 80px;
-    width: 80px;
-    border-radius: 16px;
-    background: #fff;
-    padding: 8px;
-  }
-  .intro-header .tenant-name {
-    font-size: 36px;
-    font-weight: 800;
-  }
-  .intro-logo {
-    max-width: 300px;
-    max-height: 200px;
-    margin: 20px auto;
-  }
-  .intro-details {
-    font-size: 18px;
-    line-height: 1.6;
-    text-align: left;
-    max-width: 800px;
-    margin: 20px auto;
+    gap: 2vw;
+    margin-bottom: 2vh;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
-  /* Directory Styles */
+  .intro-header img {
+    height: 12vh;
+    width: 12vh;
+    border-radius: 16px;
+    background: #fff;
+    padding: 0.5vh;
+    object-fit: contain;
+  }
+
+  .intro-header .tenant-name {
+    font-size: 4vh;
+    font-weight: 800;
+    padding: 1vh 2vw;
+    background: rgba(0,0,0,0.4); /* overlay */
+    color: #fff;
+    border-radius: 8px;
+  }
+
+  .intro-logo {
+    max-width: 90vw;
+    max-height: 35vh;
+    margin: 2vh auto;
+    object-fit: contain;
+    background: rgba(0,0,0,0.2);
+    padding: 0.5vh;
+    border-radius: 12px;
+  }
+
+  .intro-details {
+    font-size: 2.5vh;
+    line-height: 1.4;
+    text-align: left;
+    max-width: 90vw;
+    margin: 1vh auto;
+    background: rgba(0,0,0,0.35);
+    color: #fff;
+    padding: 1.5vh 2vw;
+    border-radius: 10px;
+  }
+
+  /* Directory container */
   .directory-container {
     width: 100%;
     height: 100%;
-    overflow: hidden; /* hide scrollbars */
-    padding: 40px;
+    overflow: hidden;
+    padding: 2vh 2vw;
     box-sizing: border-box;
-    background: #ffffff;
+    background: rgba(255,255,255,0); /* transparent */
     color: #222;
   }
+
   .directory-title {
-    font-size: 32px;
+    font-size: 4vh;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
+    padding: 1vh 2vw;
+    background: rgba(0,0,0,0.4);
+    color: #fff;
+    border-radius: 8px;
   }
+
   .directory-header {
     display: flex;
     justify-content: space-between;
     font-weight: bold;
-    margin-bottom: 10px;
-    font-size: 20px;
+    margin-bottom: 1vh;
+    font-size: 3vh;
     border-bottom: 2px solid #222;
-    padding-bottom: 5px;
+    padding: 0.5vh 2vw;
+    background: rgba(0,0,0,0.3);
+    color: #fff;
+    border-radius: 6px;
   }
+
   .floor-section {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin-bottom: 2vh;
+    flex-wrap: wrap;
+    background: rgba(0,0,0,0.25);
+    padding: 1vh 2vw;
+    border-radius: 8px;
   }
+
+  .floor-section div:first-child {
+    font-size: 3vh;
+    min-width: 80px;
+    color: #fff;
+  }
+
   .tenant-logos {
     display: flex;
-    flex-wrap: nowrap;
-    gap: 15px;
+    flex-wrap: wrap;
+    gap: 1vw;
     overflow: hidden;
+    max-width: 80vw;
   }
+
   .tenant-logos img {
-    height: 70px;
-    width: 70px;
+    height: 8vh;
+    width: auto;
+    object-fit: contain;
+    border-radius: 6px;
   }
 
   @keyframes fadeInUp {
-    0%{opacity:0; transform:translateY(40px);}
+    0%{opacity:0; transform:translateY(4vh);}
     100%{opacity:1; transform:translateY(0);}
+  }
+
+  @media (max-width: 768px){
+    .intro-header .tenant-name { font-size: 5vw; }
+    .intro-details { font-size: 3vw; }
+    .directory-title { font-size: 5vw; }
+    .directory-header { font-size: 3.5vw; }
+    .tenant-logos img { height: 10vw; }
   }
 </style>
 </head>
@@ -229,7 +290,6 @@ onValue(floorsRef,(snapshot)=>{
     title.textContent = "Tenant Directory";
     container.appendChild(title);
 
-    // Header row with Floor & Block Name
     const headerRow = document.createElement("div");
     headerRow.className = "directory-header";
     headerRow.innerHTML = `<span>Floor</span><span>Block Name</span>`;
@@ -260,14 +320,17 @@ onValue(floorsRef,(snapshot)=>{
 
     directoryView.appendChild(container);
 
-    // Auto scroll vertically
-    container.scrollTo({top:0});
+    // Auto scroll
     let scrollAmount = 0;
-    const scrollStep = container.scrollHeight / 100; 
+    const maxScroll = container.scrollHeight - container.clientHeight;
+    const scrollStep = maxScroll / 200;
     const scrollInterval = setInterval(()=>{
       scrollAmount += scrollStep;
-      container.scrollTo({top:scrollAmount, behavior:"smooth"});
-    },200);
+      if(scrollAmount >= maxScroll){
+        scrollAmount = maxScroll;
+      }
+      container.scrollTo({top: scrollAmount, behavior:"smooth"});
+    },50);
 
     setTimeout(()=>{
       clearInterval(scrollInterval);
@@ -299,7 +362,7 @@ function initParticles(){
 }
 function animateParticles(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  ctx.fillStyle="#0f0"; // green particles
+  ctx.fillStyle="#0f0";
   particlesArray.forEach(p=>{
     ctx.beginPath();
     ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
@@ -310,7 +373,7 @@ function animateParticles(){
   });
   requestAnimationFrame(animateParticles);
 }
-window.addEventListener("resize",initParticles);
+window.addEventListener("resize",()=>{ initParticles(); });
 initParticles();
 animateParticles();
 </script>
