--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     transition: opacity 0.8s ease;
   }
 
-  /* Fullscreen intro */
+  /* Transparent fullscreen intro */
   .intro-fullscreen {
     width: 100%;
     height: 100%;
@@ -48,6 +48,7 @@
     text-align: center;
     animation: fadeInUp 0.8s ease forwards;
     background: rgba(255,255,255,0); /* transparent */
+    color: #222;
     padding: 2vh 2vw;
     box-sizing: border-box;
   }
@@ -73,10 +74,6 @@
   .intro-header .tenant-name {
     font-size: 4vh;
     font-weight: 800;
-    padding: 1vh 2vw;
-    background: rgba(0,0,0,0.4); /* overlay */
-    color: #fff;
-    border-radius: 8px;
   }
 
   .intro-logo {
@@ -84,9 +81,6 @@
     max-height: 35vh;
     margin: 2vh auto;
     object-fit: contain;
-    background: rgba(0,0,0,0.2);
-    padding: 0.5vh;
-    border-radius: 12px;
   }
 
   .intro-details {
@@ -95,13 +89,9 @@
     text-align: left;
     max-width: 90vw;
     margin: 1vh auto;
-    background: rgba(0,0,0,0.35);
-    color: #fff;
-    padding: 1.5vh 2vw;
-    border-radius: 10px;
   }
 
-  /* Directory container */
+  /* Transparent directory overlay */
   .directory-container {
     width: 100%;
     height: 100%;
@@ -117,10 +107,6 @@
     font-weight: bold;
     text-align: center;
     margin-bottom: 2vh;
-    padding: 1vh 2vw;
-    background: rgba(0,0,0,0.4);
-    color: #fff;
-    border-radius: 8px;
   }
 
   .directory-header {
@@ -130,10 +116,7 @@
     margin-bottom: 1vh;
     font-size: 3vh;
     border-bottom: 2px solid #222;
-    padding: 0.5vh 2vw;
-    background: rgba(0,0,0,0.3);
-    color: #fff;
-    border-radius: 6px;
+    padding-bottom: 0.5vh;
   }
 
   .floor-section {
@@ -142,15 +125,11 @@
     justify-content: space-between;
     margin-bottom: 2vh;
     flex-wrap: wrap;
-    background: rgba(0,0,0,0.25);
-    padding: 1vh 2vw;
-    border-radius: 8px;
   }
 
   .floor-section div:first-child {
     font-size: 3vh;
     min-width: 80px;
-    color: #fff;
   }
 
   .tenant-logos {
@@ -165,7 +144,6 @@
     height: 8vh;
     width: auto;
     object-fit: contain;
-    border-radius: 6px;
   }
 
   @keyframes fadeInUp {
